<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.dell.testappkotlin.MovieDetails">

        <ImageView
            android:id="@+id/detail_poster_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/noposter"
            android:contentDescription="@string/poster"/>

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/detail_poster_image"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/detail_poster_image"
            android:layout_toRightOf="@+id/detail_poster_image"
            android:text="@string/release_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_date"
            android:layout_alignStart="@+id/detail_date"
            android:layout_below="@+id/detail_date"
            android:layout_marginTop="@dimen/text_margin_large"
            android:text="@string/rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/detail_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/detail_rating"
            android:layout_alignStart="@+id/detail_rating"
            android:layout_below="@+id/detail_rating"
            android:layout_marginTop="@dimen/text_margin_small"
            android:text="@string/votes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_default" />

        <View
            android:id = "@+id/divider"
            android:layout_width = "match_parent"
            android:layout_height= "2dp"
            android:layout_marginTop="@dimen/text_margin_med"
            android:background="@color/blue_grey"
            android:layout_below="@+id/detail_poster_image"/>
        <TextView
            android:id="@+id/detail_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/divider"
            android:layout_marginTop="@dimen/text_margin_med"
            android:text="@string/overview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/detail_synopsis"
            android:layout_marginTop="@dimen/text_margin_small"
            android:text="Medium Text"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_default" />

    </RelativeLayout>
</ScrollView>